--- a/user-profiles/index.css
+++ b/user-profiles/index.css
@@ -13,6 +13,10 @@ button {
   cursor: pointer;
 }
 
+.btn-remove {
+  background-color: #b1b1e3;
+}
+
 input, textarea {
   border: 0px;
   border-radius: 5px;
