--- a/user-profiles/index.css
+++ b/user-profiles/index.css
@@ -13,7 +13,7 @@ button {
   cursor: pointer;
 }
 
-.btn-remove {
+.btn-addr {
   background-color: #b1b1e3;
 }
 
@@ -21,6 +21,20 @@ input, textarea {
   border: 0px;
   border-radius: 5px;
   padding: 0.25rem;
+}
+
+label {
+  font-weight: bold;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 0.25rem;
 }
 
 .app-header {
@@ -73,4 +87,8 @@ input, textarea {
 
 .set-password {
   margin-top: 1rem;
+}
+
+.mt {
+  margin-top: 0.5rem;
 }
