import script file to use moralis

--- a/angular-moralis/src/app/app.component.html
+++ b/angular-moralis/src/app/app.component.html
@@ -2,19 +2,19 @@
   <div class="row">
     <div class="col"></div>
     <div class="col">
-      <h3 class="mt-5 mb-5">{{ title }}</h3>
-      <div class="card text-center" style="width: 18rem">
-        <img src="../assets/moralis-logo.png" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <a class="btn btn-outline-primary" (click)="login()">Login with MetaMask</a>
+      <div *ngIf="!isLoggedIn">
+        <h3 class="mt-5 mb-5">{{ title }}</h3>
+        <div class="card text-center" style="width: 18rem">
+          <img src="../assets/moralis-logo.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="btn btn-outline-primary" (click)="login()">Login with MetaMask</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
       <div *ngIf="isLoggedIn">
-        <h3 class="mt-5">Log in</h3>
+        <h3 class="mt-5 ml-2">Authenticated area</h3>
         <div class="card text-dark bg-light mt-5" style="max-width: 18rem">
-          <div class="card-header">You are login</div>
+          <div class="card-header">Logged</div>
           <div class="card-body">
             <h5 class="card-title">CreatedAt</h5>
             <p class="card-text">{{ createdAt | date: "dd/MM/yyyy" }}</p>
@@ -30,6 +30,10 @@
           </div>
         </div>
       </div>
+
+    </div>
+    <div class="col">
+   
     </div>
   </div>
 </div>
